# mcp-demo

mcp-client/: README.md  client.py  main.py  pyproject.toml  settings.py  weather_client.py
mcp-client/models/options/: llm_client_options.py
mcp-server/: README.md  initialize_server.py  main.py  pyproject.toml  requirements.txt  weather_server.py
weather/: README.md  helpers.py  main.py  pyproject.toml  weather_server.py
weather_client/: .gitignore  README.md  configs.py  main.py  requirements.txt  weather_client.py
weather_server/: README.md  constants.py  main.py  utils.py  weather_client.py  weather_server_tools.py
